--- a/app/src/main/res/layout/activity_football_page.xml
+++ b/app/src/main/res/layout/activity_football_page.xml
@@ -59,6 +59,8 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/exitButton"
+        android:layout_marginBottom="40dp"
+        android:layout_marginTop="16dp"
         android:layout_width="150dp"
         android:layout_height="60dp"
         android:background="@drawable/btn_green"
