--- a/app/src/main/res/layout-land/activity_sign_up.xml
+++ b/app/src/main/res/layout-land/activity_sign_up.xml
@@ -57,6 +57,8 @@
 
                 <EditText
                     android:id="@+id/editTextEmail"
+                    android:textColor="#000000"
+                    android:textColorHint="#899499"
                     android:layout_width="match_parent"
                     android:layout_height="60dp"
                     android:layout_marginTop="16dp"
@@ -69,6 +71,8 @@
 
                 <EditText
                     android:id="@+id/editTextUsername"
+                    android:textColor="#000000"
+                    android:textColorHint="#899499"
                     android:layout_width="match_parent"
                     android:layout_height="60dp"
                     android:layout_marginTop="16dp"
@@ -81,6 +85,8 @@
 
                 <EditText
                     android:id="@+id/editTextPassword"
+                    android:textColor="#000000"
+                    android:textColorHint="#899499"
                     android:layout_width="match_parent"
                     android:layout_height="60dp"
                     android:layout_marginTop="16dp"
@@ -93,6 +99,8 @@
 
                 <EditText
                     android:id="@+id/editTextPasswordAgain"
+                    android:textColor="#000000"
+                    android:textColorHint="#899499"
                     android:layout_width="match_parent"
                     android:layout_height="60dp"
                     android:layout_marginTop="16dp"
