--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,6 +41,8 @@
 
     <EditText
         android:id="@+id/editTextEmail"
+        android:textColor="#000000"
+        android:textColorHint="#899499"
         android:layout_width="300dp"
         android:layout_height="60dp"
         android:background="@drawable/edittext_background"
@@ -59,6 +61,8 @@
 
     <EditText
         android:id="@+id/editTextPassword"
+        android:textColor="#000000"
+        android:textColorHint="#899499"
         android:layout_width="300dp"
         android:layout_height="60dp"
         android:background="@drawable/edittext_background"
