--- a/app/src/main/res/layout/activity_football_page.xml
+++ b/app/src/main/res/layout/activity_football_page.xml
@@ -8,6 +8,15 @@
     android:background="#424242"
     tools:context=".FootballPageActivity">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical"
+
+        />
+
+
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="300dp"
