--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -13,6 +13,20 @@
         android:layout_height="wrap_content"
         android:paddingBottom="24dp">
 
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:paddingTop="16dp"
+            android:layout_width="0dp"
+            android:layout_height="75dp"
+            android:layout_marginTop="0dp"
+            android:background="?attr/colorPrimary"
+            android:minHeight="?attr/actionBarSize"
+            android:theme="?attr/actionBarTheme"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <TextView
             android:id="@+id/textView"
             android:layout_marginTop="70dp"
@@ -31,27 +45,16 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0" />
 
-        <View
-            android:id="@+id/divider"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#FFFFFF"
-            android:layout_marginTop="16dp"
-            android:alpha="0.2"
-            app:layout_constraintTop_toBottomOf="@+id/textView"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
-
         <TextView
             android:id="@+id/nameLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/username"
+            android:layout_marginTop="12dp"
+            android:text="@string/username_"
             android:textColor="#FFFFFF"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="@+id/textViewNameProfile"
-            app:layout_constraintTop_toBottomOf="@+id/divider"
-            android:layout_marginTop="32dp" />
+            app:layout_constraintTop_toBottomOf="@+id/textView" />
 
         <TextView
             android:id="@+id/textViewNameProfile"
@@ -73,54 +76,51 @@
 
         <TextView
             android:id="@+id/emailLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/email"
+            android:layout_width="50dp"
+            android:layout_height="24dp"
+            android:layout_marginTop="24dp"
+            android:text="@string/email_"
             android:textColor="#FFFFFF"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="@+id/textViewEmailProfile2"
-            app:layout_constraintTop_toBottomOf="@+id/textViewNameProfile"
-            android:layout_marginTop="24dp"/>
+            app:layout_constraintTop_toBottomOf="@+id/textViewNameProfile" />
 
         <TextView
             android:id="@+id/textViewEmailProfile2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="32dp"
+            android:layout_marginTop="8dp"
+            android:background="#616161"
+            android:elevation="2dp"
             android:gravity="center_vertical"
             android:padding="16dp"
-            android:textSize="20sp"
             android:textColor="#FFFFFF"
-            android:background="#616161"
-            android:layout_marginHorizontal="32dp"
-            android:elevation="2dp"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.508"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/emailLabel"
-            android:layout_marginTop="8dp"
             app:layout_constraintWidth_percent="0.85"
             tools:ignore="LabelFor" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/backButton"
-            android:layout_width="0dp"
+            android:id="@+id/signUpButton"
+            android:layout_width="170dp"
             android:layout_height="60dp"
-            android:layout_marginTop="40dp"
-            android:layout_marginBottom="40dp"
             android:background="@drawable/btn_green"
             android:gravity="center"
-            android:onClick="back"
+            android:onClick="deleteProfile"
             android:padding="10dp"
-            android:text="@string/back"
+            android:text="@string/delete_profile"
             android:textColor="#FFFFFF"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.495"
+            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textViewEmailProfile2"
-            app:layout_constraintVertical_bias="0.0"
-            app:layout_constraintWidth_percent="0.7"
-            tools:ignore="OnClick" />
+            app:layout_constraintVertical_bias="0.1" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
