--- a/app/src/main/res/layout/list_tournament.xml
+++ b/app/src/main/res/layout/list_tournament.xml
@@ -29,7 +29,8 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
                 android:text="@string/tournament_name"
-                android:textSize="20sp" android:textStyle="bold"
+                android:textSize="20sp"
+                android:textStyle="bold"
                 android:textColor="#FFFFFF"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -109,20 +110,33 @@
                 app:layout_constraintStart_toEndOf="@+id/endDateLabel"
                 app:layout_constraintTop_toTopOf="@+id/endDateLabel" />
 
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/goToEdit"
-                android:layout_width="80dp" android:layout_height="wrap_content"
+            <TextView
+                android:id="@+id/descriptionLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="10dp" android:layout_marginEnd="16dp"
-                android:layout_marginBottom="16dp"
-                android:background="@drawable/btn_green"
-                android:onClick="goToDetails"
-                android:text="@string/details"
+                android:layout_marginTop="16dp"
+                android:text="@string/description"
+                android:textStyle="bold"
                 android:textColor="#FFFFFF"
-                android:textSize="12sp" app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/endDate"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintTop_toBottomOf="@+id/endDateLabel" />
+
+            <TextView
+                android:id="@+id/description"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
+                android:text=""
+                android:textColor="#FFFFFF"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/descriptionLabel"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="16dp"
+                android:minHeight="60dp"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
