--- a/app/src/main/res/menu/tournaments_menu.xml
+++ b/app/src/main/res/menu/tournaments_menu.xml
@@ -2,12 +2,20 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+
+
     <item
         android:id="@+id/search_bar"
         android:title="@string/search"
         android:icon="@drawable/search"
         app:actionViewClass="androidx.appcompat.widget.SearchView"
         app:showAsAction="ifRoom|collapseActionView" />
+
+    <item
+        android:id="@+id/home"
+        android:title="@string/home"
+        android:textColor="#FFFFFF"
+        app:showAsAction="always" />
 
     <item
         android:id="@+id/profile"
